# 5-final-galaxy

./: .coveragec  .env.example  .env.production  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: common.yml  llm.yml  ml.yml  web-app.yml
common/: models.py  requirements.txt
common/tests/: test_models.py
llm/: Dockerfile  agent.py  agent_demo.py  llm_app.py  requirements.txt  tool.py
llm/tests/: test_agent.py  test_llm_app.py  test_tool.py
ml/: Dockerfile  ml_app.py  requirements.txt
tests/unit/: conftest.py
tests/unit/common/: test_models.py
tests/unit/llm/: test_agent.py  test_llm_app.py  test_tool.py
web-app/: Dockerfile  __init__.py  app.py  requirements.txt
web-app/templates/: detail.html  history.html  index.html  login.html  register.html  trending.html
web-app/tests/: test_app.py
