[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["common/tests", "llm/tests", "web-app/tests"]
pythonpath = [".", "common", "llm", "web-app"]

[tool.coverage.run]
source = ["common", "llm", "web-app"]
omit = ["*/tests/*", "*/site-packages/*", "*/tests/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]